--- a/AvaloniaTodoApp/AvaloniaTodoApp.csproj
+++ b/AvaloniaTodoApp/AvaloniaTodoApp.csproj
@@ -21,5 +21,6 @@
         <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.1.0"/>
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1"/>
         <PackageReference Include="Meziantou.Framework.RelativeDate" Version="2.0.2" />
+        <PackageReference Include="System.Reactive" Version="6.0.1" />
     </ItemGroup>
 </Project>
