--- a/AvaloniaTodoApp/AvaloniaTodoApp.csproj
+++ b/AvaloniaTodoApp/AvaloniaTodoApp.csproj
@@ -31,6 +31,8 @@
         <PackageReference Include="DialogHost.Avalonia" Version="0.9.2" />
         <PackageReference Include="Meziantou.Framework.RelativeDate" Version="2.1.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.2" />
+        <PackageReference Include="Projektanker.Icons.Avalonia" Version="9.4.0" />
+        <PackageReference Include="Projektanker.Icons.Avalonia.MaterialDesign" Version="9.4.0" />
         <PackageReference Include="Supabase" Version="1.1.1" />
         <PackageReference Include="System.Reactive" Version="6.0.1" />
     </ItemGroup>
